--- a/phpBasedWebsiteTemplate/css/main.css
+++ b/phpBasedWebsiteTemplate/css/main.css
@@ -64,11 +64,17 @@ td.menu{
 	background: #e8031b;	/* Hexidecimal code for background color Strawberry-Red */
 }
 
-	/* Default h1 format */
+	/* Default h1, h2 formats */
 
 h1{
 	color: #e8031b;		/* Hexidecimal code for the text color Strawberry-Red */
 	font-size: 24pt;
+	text-align: center;
+	font-family: arial, verdana, san-serif;
+}
+
+h2{
+	color: #e8031b;		/* Hexidecimal code for the text color Strawberry-Red */
 	text-align: center;
 	font-family: arial, verdana, san-serif;
 }
@@ -85,17 +91,6 @@ p{
 div.content{
 	margin-left: 20%;
 	margin-right:20%;
-}
-
-	/* Default footer settings */
-
-p.foot{
-	background: #e8031b;	/* Hexidecimal code for background color Strawberry-Red */
-	color: #ffffff;
-	font-size: 9pt;
-	text-align:center;
-	font-family: arial, verdana, sans-serif;
-	font-weight: bold;
 }
 
 	/* Default internal/external links settings */
