--- a/phpBasedWebsiteTemplate/css/main.css
+++ b/phpBasedWebsiteTemplate/css/main.css
@@ -89,8 +89,16 @@ p{
 }
 
 div.content{
-	margin-left: 20%;
-	margin-right:20%;
+	width: 100%;
+	height: 250;
+	margin-left: 10%;
+	margin-right: 10%;
+}
+
+div.row{
+	width:33.3%;
+	text-align: center;
+	margin: auto;
 }
 
 	/* Default internal/external links settings */
