--- a/updatedWebsite/css/main.css
+++ b/updatedWebsite/css/main.css
@@ -41,10 +41,18 @@
  	background-repeat: no-repeat;
 }
 
+.homepage{
+	position: relative;
+	width: 100%;
+	height: 600px;
+	overflow: scroll;
+	text-align: center;
+}
+
 .container{
 	position: relative;
 	width: 90%;
-	height: 575px;
+	height: 475px;
 	overflow: scroll;
 }
 
