--- a/updatedWebsite/css/main.css
+++ b/updatedWebsite/css/main.css
@@ -52,7 +52,14 @@
 .container{
 	position: relative;
 	width: 90%;
-	height: 475px;
+	height: 500px;
+	overflow: scroll;
+}
+
+.products{
+	position: relative;
+	width: 90%;
+	height: 575px;
 	overflow: scroll;
 }
 
