--- a/updatedWebsite/css/main.css
+++ b/updatedWebsite/css/main.css
@@ -42,7 +42,7 @@
 }
 
 .homepage{
-	position: relative;
+
 	width: 100%;
 	height: 600px;
 	overflow: scroll;
@@ -61,6 +61,14 @@
 	width: 90%;
 	height: 575px;
 	overflow: scroll;
+}
+
+.slogan{
+	position: absolute;
+	top: 50%;
+    z-index: 25;
+    margin-left: 25%;
+    width: 75%;
 }
 
 .callCenter{
