--- a/updatedWebsite/css/main.css
+++ b/updatedWebsite/css/main.css
@@ -65,10 +65,10 @@
 
 .slogan{
 	position: absolute;
-	top: 50%;
+	top: 35%;
     z-index: 25;
-    margin-left: 25%;
-    width: 75%;
+	margin: 10%;
+    width: 80%;
 }
 
 .callCenter{
